# ai-cci-avcs-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROMPT_CLAUDE_CODE_v3.md  README.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: ai-act-check.md  audit-chain-verify.md  check-architecture.md  run-coherence-test.md  verify-grounding.md
.claude/hooks/: post-tool-use.cjs  post-tool-use.mjs  post-tool-use.sh  pre-commit-validate.mjs  pre-commit-validate.sh  pre-tool-use.cjs  pre-tool-use.mjs  pre-tool-use.sh
.claude/skills/cci-agentic-langgraph/: SKILL.md
.claude/skills/cci-ai-act-compliance/: SKILL.md
.claude/skills/cci-architecture-guard/: SKILL.md
.claude/skills/cci-audit-chain/: SKILL.md
.claude/skills/cci-frontend-nextjs/: SKILL.md
.claude/skills/cci-grounding-enforcer/: SKILL.md
.claude/skills/cci-ontology-yaml/: SKILL.md
.claude/skills/cci-rag-hybrid/: SKILL.md
.claude/skills/cci-temporal-knowledge-graph/: SKILL.md
docs/: CCI_AVCS_Requirements.html
docs/adr/: 0001-frontend-vite-spa.md  0001-use-langgraph.md  0002-manual-apifetch-scaffold.md  0002-temporal-graph-neo4j.md  0003-grounding-enforcement.md
docs/architecture/: c4-container.mmd  c4-context.mmd  data-flow.mmd
docs/compliance/: ai-act-mapping.yaml  gdpr-data-flow.md  iso42001-roadmap.md
docs/ontologies/: aou_clinical.yaml  dallara.yaml  ducati_corse.yaml  hera_it.yaml  prada.yaml  semsotec_product.yaml
docs/superpowers/plans/: 2026-06-06-frontend-react-uvicorn.md
docs/superpowers/specs/: 2026-06-06-frontend-react-uvicorn-design.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  index.html  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: globals.css  kpi-strip-client.tsx  layout.tsx  page.tsx  recent-incoherences-client.tsx
frontend/app/audit/: page.tsx  trail-client.tsx
frontend/app/hitl/: page.tsx  queue-client.tsx
frontend/app/incoherences/: list-client.tsx  loading.tsx  page.tsx
frontend/components/: audit-chain-status.tsx  chunk-citation.tsx  explanation-block.tsx  generate-explanation-button.tsx  hitl-approval-form.tsx  incoherence-card.tsx  kpi-strip.tsx  nav.tsx  providers.tsx
frontend/e2e/: dashboard.spec.ts  incoherences.spec.ts  playwright.config.ts
frontend/hooks/: use-audit-trail.ts  use-explanation.ts  use-hitl-queue.ts  use-incoherences.ts
frontend/lib/: query-client.ts  utils.ts
frontend/lib/api/: coherence.ts  governance.ts  index.ts  types.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: chunk-citation.tsx  explanation-block.tsx  generate-explanation-button.tsx  incoherence-card.tsx  kpi-strip.tsx  sidebar.tsx
frontend/src/hooks/: use-audit-events.ts  use-explanation.ts  use-hitl-queue.ts  use-incoherence.ts  use-incoherences.ts
frontend/src/lib/: api.ts  types.ts  utils.ts
frontend/src/pages/: audit.tsx  dashboard.tsx  hitl-action.tsx  hitl-queue.tsx  incoherence-detail.tsx  incoherences.tsx
frontend/src/tests/: chunk-citation.test.tsx  explanation-block.test.tsx  (+5 more)
infra/docker/: prometheus.yml  tempo.yaml
libs/cci-common/: pyproject.toml
libs/cci-common/src/cci_common/: __init__.py  domain.py  events.py  observability.py
libs/cci-common/tests/: conftest.py  test_domain.py  test_events.py
libs/cci-llm/: pyproject.toml
libs/cci-llm/src/cci_llm/: __init__.py  citation_guard.py  client.py  models.py
libs/cci-llm/tests/: conftest.py  test_citation_guard.py  test_client.py
prompts/v1/: generator.j2  planner.j2
scripts/: run_all_coherence_test.py  run_coherence_test.py  run_demo_scenario.py  seed_demo_data.py  verify_audit_chain.py
scripts/scenarios/: __init__.py  aou_trial_2026.py  base.py  dallara_oem_2026.py  ducati_season_2026.py  hera_q1_2026.py  prada_dpp_2026.py  semsotec_cert_2026.py
services/agents/: Dockerfile  pyproject.toml
services/agents/src/cci_agents/: api.py  config.py  graph.py  main.py  state.py
services/agents/src/cci_agents/nodes/: auditor.py  generator.py  planner.py  retriever.py  verifier.py
services/agents/tests/: conftest.py  test_api.py  test_graph.py  test_nodes.py
services/coherence/: Dockerfile  pyproject.toml
services/coherence/src/cci_coherence/: api.py  config.py  cypher_evaluator.py  db.py  entity_extractor.py  main.py  models.py  rule_engine.py  rule_evaluator.py
services/coherence/tests/: conftest.py  test_api.py  test_entity_extractor.py  test_rule_evaluator.py
services/frontend/: .gitignore  Dockerfile  README.md  pyproject.toml
services/frontend/src/cci_frontend/: health.py  main.py  proxy.py
services/frontend/tests/: test_health.py  test_proxy.py
services/governance/: Dockerfile  pyproject.toml
services/governance/src/cci_governance/: api.py  audit_log.py  config.py  hitl.py  main.py  models.py
services/governance/tests/: conftest.py  test_api.py  test_audit_log.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/cci_ingestion/: __init__.py  api.py  config.py  main.py  pipeline.py  publishers.py
services/ingestion/src/cci_ingestion/extractors/: chunker.py  embedder.py  ner_extractor.py
services/ingestion/src/cci_ingestion/parsers/: document_parser.py
services/ingestion/tests/: test_api.py  test_chunker.py  test_document_parser.py  test_ner_extractor.py
services/knowledge/: Dockerfile  pyproject.toml
services/knowledge/src/cci_knowledge/: __init__.py  api.py  config.py  event_consumer.py  main.py  ontology_loader.py  temporal_graph.py  timeseries.py  vector_store.py
services/knowledge/tests/: conftest.py  test_api.py  test_ontology_loader.py  test_temporal_graph.py  test_vector_store.py
services/retrieval/: Dockerfile  pyproject.toml
services/retrieval/src/cci_retrieval/: __init__.py  api.py  bm25_index.py  cache.py  citation_enforcer.py  config.py  embedder.py  hybrid_retriever.py  main.py  reranker.py  rrf.py
services/retrieval/tests/: conftest.py  test_api.py  test_citation_enforcer.py  test_rrf.py
(+34 files in other folders)
