[project]
name = "cci-common"
version = "0.1.0"
description = "CCI/AVCS shared types, CloudEvents schemas, domain models, OTel setup"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "cloudevents>=1.11",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "coverage>=7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_common"]
