[project]
name = "cci-llm"
version = "0.1.0"
description = "CCI/AVCS LLM wrapper — Anthropic SDK, citation enforcement, PII redaction"
requires-python = ">=3.12"
dependencies = [
    "cci-common",
    "anthropic>=0.28",
    "pydantic>=2.7",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "coverage>=7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_llm"]
