[project]
name = "cci-agents"
version = "0.1.0"
description = "CCI/AVCS agentic orchestration — LangGraph state machine, 5 agents, citation enforcement"
requires-python = ">=3.12"
dependencies = [
    "cci-common",
    "cci-llm",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "langgraph>=0.1",
    "langgraph-checkpoint-mongodb>=0.1",
    "langchain-core>=0.2",
    "motor>=3.4",
    "redis>=5.0",
    "jinja2>=3.1",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
    "testcontainers[mongodb,redis]>=4.5",
    "coverage>=7.5",
]

[tool.uv.sources]
cci-common = { workspace = true }
cci-llm = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
