[project]
name = "cci-governance"
version = "0.1.0"
description = "CCI/AVCS governance service — immutable audit log, HITL API, AI Act compliance"
requires-python = ">=3.12"
dependencies = [
    "cci-common",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "motor>=3.4",
    "pymongo>=4.6",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[mongodb]>=4.5",
    "coverage>=7.5",
]

[tool.uv.sources]
cci-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_governance"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
