[project]
name = "cci-ingestion"
version = "0.1.0"
description = "CCI/AVCS ingestion service — document parsing, NER, chunking, embedding"
requires-python = ">=3.12"
dependencies = [
    "cci-common",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "unstructured[all-docs]>=0.13",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "qdrant-client>=1.9",
    "redis>=5.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[qdrant]>=4.5",
    "coverage>=7.5",
]

[tool.uv.sources]
cci-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_ingestion"]
