[project]
name = "cci-knowledge"
version = "0.1.0"
description = "CCI/AVCS knowledge service — vector store, temporal KG, time-series"
requires-python = ">=3.12"
dependencies = [
    "cci-common",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "qdrant-client>=1.9",
    "neo4j>=5.20",
    "motor>=3.4",
    "pyyaml>=6.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "testcontainers[neo4j,mongodb]>=4.5",
    "coverage>=7.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cci_knowledge"]
